Fix Selections modal layouts on mobile, multiple compound issues.

--- a/resources/assets/js/Selection/SelectionModal.scss
+++ b/resources/assets/js/Selection/SelectionModal.scss
@@ -73,7 +73,7 @@
 }
 
 .SelectionModal__wrapper {
-  padding: 50px 0;
+  padding: 50px 0 0;
   box-sizing: border-box;
   min-height: 100%;
   display: flex;
@@ -142,8 +142,14 @@
   width: 100%;
 }
 .SelectionModal__input-fieldset {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  @include breakpoint(768px) {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .SelectionModal__wrapper--user & {
+    margin-bottom: 0;
+  }
 }
 .SelectionModal__input-legend {
   display: block;
@@ -267,7 +273,6 @@
 .SelectionModal__edit-form {
   box-sizing: border-box;
   width: 100%;
-  padding: 20px;
   color: #fff;
   overflow-y: auto;
 
